--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-Assets/TextMesh Pro/* linguist-vendored
-Assets/TutorialInfo/* linguist-vendored
+* linguist-vendored
+*.cs linguist-vendored=false
