--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-Assets/TextMesh*Pro/* linguist-vendored
-*.xsd linguist-vendored
+Assets/TextMesh?Pro/* linguist-vendored
