--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,10 @@
-# Ignore shaders
+# Collapse Unity-generated files on GitHub
 *.shader linguist-vendored
+*.asset linguist-generated
+*.mat linguist-generated
+*.meta linguist-generated
+*.prefab linguist-generated
+*.unity linguist-generated
 
 # Macro for Unity YAML-based asset files.
 [attr]unityyaml -text merge=unityyamlmerge diff
